Help Support, Footer layout, Popup s alignments Fix for mobile view

--- a/src/app/user-after-login/user-after-login.component.css
+++ b/src/app/user-after-login/user-after-login.component.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: space-between;
     padding: 5px 0;
-    height: 90vh;
+    height: 87vh;
 }
 .flex-item {
     height: 100%;
@@ -23,6 +23,7 @@
 #middle {
     flex-grow: 1;
     margin: 0 5px;
+    position:relative;
 }
 .fixed-bottom {
     position: relative;
@@ -86,7 +87,7 @@
     height: 100%;
     overflow-y: auto;
     box-sizing: border-box;
-    margin-bottom: 20%;
+    /* margin-bottom: 20%; */
 }
 
 .bottom-div {
@@ -642,4 +643,20 @@ input[type="text"], input[type="password"]{
   padding: 2px 0px;
   height: 100%;
   width:100%;
+}
+.fixed-bottom {
+  width: 100%;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #333;
+  color: black;
+  text-align: center;
+  line-height: 50px;
+}
+@media (max-width: 500px) {
+  .grid-container {
+      grid-template-columns: 1fr;
+  }
 }
